# nzfz

./: .gitignore  AGENTS.md  README.md  tower_defense_script_protocol_v1_example.json  《逆战：未来》塔防自动化通关测试系统需求与架构设计 V1.1.1 修订说明.md  《逆战：未来》塔防自动化通关测试系统需求与架构设计 V1.1.md  地图配置器 V1.1.1 Basic Export MVP 实现规则.md
automation-executor/: README.md  pyproject.toml  start.bat  start.sh
automation-executor/docs/: toplevel.md  vision.md
automation-executor/examples/: demo_script.json
automation-executor/reports/: report_20260520_055425.json  report_20260520_055822.json  report_20260520_055951.json
automation-executor/tests/: test_action.py  test_action_executor.py  test_capture.py  test_condition.py  test_detector.py  test_input.py  test_navigator.py  test_ocr.py  test_report.py  test_retry.py  test_slot.py  test_ui.py
executor/: README.md  main.py  pyproject.toml
executor/assets/: style.qss
executor/tests/: test_action_models.py  test_action_safety_guard.py  test_center_point_recognizer.py  test_coordinate_mapper.py  test_dry_run_mouse_backend.py  test_executor.py  test_executor_log_model.py  test_executor_oda_worker.py  test_executor_task_runner.py  test_executor_workers.py  test_feedback_messages.py  test_foreground_check.py  test_game_connect_executor_log.py  test_game_connect_executor_state.py  test_game_connect_feedback.py  test_game_connect_requests.py  test_game_connect_screenshot.py  test_game_connect_state_machine.py  test_key_utils.py  test_keyboard_controller.py  test_mouse_controller.py  test_recognizer_factory.py  test_runtime_context.py  test_screenshot_manager.py  test_script_executor.py  test_script_loader.py  test_send_input_keyboard_backend.py  test_send_input_mouse_backend.py  test_template_loader.py  test_template_matcher.py  test_template_resource.py  (+2 more)
(+264 files in other folders)
