[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "td-executor"
version = "0.0.1"
description = "Tower defense automation script executor (skeleton)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.23.0",
  "typer>=0.12.5",
  "rich>=13.7.0,<14",
]

[project.optional-dependencies]
runtime = [
  "numpy>=2.0.0",
  "opencv-python-headless>=4.10.0",
  "mss>=9.0.0",
  "loguru>=0.7.2",
]
win = [
  "pywin32>=306",
]
input = [
  "pynput>=1.7.7",
  "pyautogui>=0.9.54",
]
ocr = [
  "paddleocr>=2.8.0",
]
ui = [
  "Pillow>=10.0.0",
]

[project.scripts]
td-executor = "td_executor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
